# weather_app

./: .gitignore  Dockerfile  READ_ME.md  docker-compose.yml  pyproject.toml
app/: main.py  services.py
app/routers/: weather.py
docs/: architecture_application.md
tests/: test_weather.py
